force-app/main/default/objects/PROS_Log__c/PROS_Log__c.object-meta.xml
<CustomObject>
    <label>PROS Log</label>
    <nameField>
        <label>PROS Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>