force-app/main/default/objects/PROS_Log__c/fields/PROS_Quote__c.field-meta.xml
<CustomField>
    <fullName>PROS_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PROS Quote</label>
    <referenceTo>CameleonCPQ__Quote__c</referenceTo>
    <relationshipLabel>PROS Logs</relationshipLabel>
    <relationshipName>PROS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>