force-app/main/default/objects/PROS_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECORD</fullName>
            </value>
            <value>
                <fullName>INFORMATION</fullName>
            </value>
            <value>
                <fullName>CONFIG</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>